src/test/deca/syntax/invalid/created/public_items/class.deca
// Description:
//		Definir une classe comme public de maniere explicite
// Resultats:
//		Erreur syntaxe Ligne 6 : no viable alternative at input 'public'

public class A{
}

